# rc

./: README.md
rc-vla-lab/: .gitignore  README.md  lab_libero.ipynb  pyproject.toml
rc-vla-lab/src/: __init__.py  image_utils.py  libero_utils.py
rc1/: README.md  download_data.py  pyproject.toml
rc1/calibration/: __init__.py  calibrate.py  undistort.py
rc1/data/selected_points/: point_pairs.csv
rc1/projective_transformation/: __init__.py  orb.py  orb_and_ransac.ipynb  projection.ipynb  transformation.py  transformation_by_hand.ipynb  transformation_test.py
rc1/utils/: __init__.py  data.py  image.py  plot.py
rc2/: drone_control.py  drone_simulator.py  lab9.md  make_submission.sh  pyproject.toml  scene.xml  timestep.py  x2.xml
rc3/: .gitignore  drone_control.py  drone_control_exp.py  drone_simulator.py  index.md  kalman_filter.py  make_submission.sh  pid.py  plotting.py  pyproject.toml  scene.xml  x2.xml
