[project]
name = "vla-lab"
version = "0.1.0"
description = "Vision-Language-Action Lab with Libero and π0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
    "opencv-python>=4.7.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "einops>=0.6.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "gymnasium>=0.28.0",
    "mujoco>=2.3.0",
    "dm-control>=1.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.0",
    "gsutil>=5.0.0",
    "easydict==1.9",
    "thop==0.1.1-2209072238",
    "cloudpickle==2.1.0",
    "gym==0.25.2",
    "future==0.18.2",
    "robosuite==1.4.0",
    "h5py>=3.9.0",
    "bddl==1.0.1",
    "openpi @ git+https://github.com/Physical-Intelligence/openpi.git",
    "libero @ git+https://github.com/Lifelong-Robot-Learning/LIBERO.git",
    "chex>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]
index-strategy = "unsafe-best-match"
